--- a/views/users/register.hbs
+++ b/views/users/register.hbs
@@ -91,10 +91,7 @@
                 />
                 <label class="form-label" for="form3Example4">Password</label>
               </div>
-              <small
-                id="ERR_PASS"
-                class="text-danger d-flex justify-content-start"
-              ></small>
+             
             </div>
 
             <!-- Submit button -->
@@ -105,7 +102,7 @@
             >
               Sign up
             </button>
-            <small class="d-flex justify-content-start"></small>
+            <small class="d-flex justify-content-start text-danger">{{ERR}}</small>
           </form>
         </div>
       </div>
